--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="se">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <header>
+            <p id="text1">Lorem ipsum dolor sit amet.</p>
+        </header>
+        <main>
+            <p id="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae sapiente tenetur illo. Officiis fugiat atque facilis quisquam! Eius amet molestias ullam veniam quaerat consequuntur exercitationem, iste sint repudiandae libero aspernatur numquam impedit itaque ab expedita accusantium recusandae, blanditiis dicta in accusamus rem enim dolorum fugit explicabo! Aperiam ipsam architecto, dicta vitae commodi fugit possimus quas! Officiis voluptates tempora itaque facere!</p>
+        </main>
+        <aside>
+           <img id="dog" src="1802.webp" alt="">
+           Lorem, ipsum.
+        </aside>
+        <footer>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae voluptas similique iste provident enim, quae fuga, vel dolore vitae atque animi deserunt voluptatibus officia reprehenderit harum officiis. Quia tempore rem, ea architecto quidem non excepturi, harum iusto reprehenderit molestias maxime.</footer>
+    </div>
 </body>
 </html>
